<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Score Keeper app Foolball</string>
    <string name="team_1">FC Barcelona</string>
    <string name="team_2">Real Madrid</string>
    <string name="team_1_logo">team 1 logo</string>
    <string name="team_2_logo">team 2 logo</string>
    <string name="goal">goal</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="yellow_card">yellow card</string>
    <string name="red_card">red card</string>
    <string name="reset">reset</string>
    <string name="players">11</string>
    <string name="messagePart1">Game Over</string>
    <string name="messagePart2">Team cannot continue with</string>
    <string name="messagePart3"> less then 7 players.</string>
</resources>
