<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context="com.example.android.scorekeeperappfoolball.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout style="@style/teamStat">

                <TextView
                    android:id="@+id/team1"
                    style="@style/teamName"
                    android:text="@string/team_1" />

                <ImageView
                    android:id="@+id/team1Logo"
                    style="@style/teamLogo"
                    android:layout_below="@id/team1"
                    android:contentDescription="@string/team_1_logo"
                    android:src="@drawable/barcelona" />

                <TextView
                    android:id="@+id/team1Score"
                    style="@style/score"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/team1Logo" />

                <Button
                    android:id="@+id/goalTeam1"
                    style="@style/addGoal"
                    android:layout_below="@+id/team1Score"
                    android:onClick="goalTeamA" />

                <LinearLayout
                    android:id="@+id/team1Players"
                    style="@style/playerAndCards"
                    android:layout_below="@id/goalTeam1">

                    <TextView
                        android:id="@+id/playerTeam1"
                        style="@style/card"
                        android:drawableStart="@drawable/player1"
                        android:gravity="center_vertical"
                        android:text="@string/players" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/team1YellowCard"
                    style="@style/playerAndCards"
                    android:layout_below="@id/team1Players">

                    <TextView
                        android:id="@+id/yellowCardTeam1"
                        style="@style/card"
                        android:drawableStart="@drawable/yellow_card50" />

                    <Button
                        android:id="@+id/addYellowCardTeam1"
                        style="@style/addCard"
                        android:onClick="yellowCardTeam1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/team1RedCard"
                    style="@style/playerAndCards"
                    android:layout_below="@id/team1YellowCard">

                    <TextView
                        android:id="@+id/redCardTeam1"
                        style="@style/card"
                        android:drawableStart="@drawable/red_card50" />

                    <Button
                        android:id="@+id/addRedCardTeam1"
                        style="@style/addCard"
                        android:onClick="redCardTeam1" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dim16"
                android:background="@android:color/holo_blue_bright" />

            <RelativeLayout style="@style/teamStat">

                <TextView
                    android:id="@+id/team2"
                    style="@style/teamName"
                    android:text="@string/team_2" />

                <ImageView
                    android:id="@+id/team2Logo"
                    style="@style/teamLogo"
                    android:layout_below="@id/team2"
                    android:contentDescription="@string/team_2_logo"
                    android:src="@drawable/madrid60" />

                <TextView
                    android:id="@+id/team2Score"
                    style="@style/score"
                    android:layout_below="@+id/team2Logo" />

                <Button
                    android:id="@+id/goalTeam2"
                    style="@style/addGoal"
                    android:layout_below="@+id/team2Score"
                    android:onClick="goalTeamB" />

                <LinearLayout
                    android:id="@+id/team2Players"
                    style="@style/playerAndCards"
                    android:layout_below="@id/goalTeam2">

                    <TextView
                        android:id="@+id/playerTeam2"
                        style="@style/card"
                        android:drawableEnd="@drawable/player2"
                        android:gravity="center_vertical|end"
                        android:text="@string/players" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/team2YellowCard"
                    style="@style/playerAndCards"
                    android:layout_below="@id/team2Players">

                    <Button
                        android:id="@+id/addYellowCardTeam2"
                        style="@style/addCard"
                        android:onClick="yellowCardTeam2" />

                    <TextView
                        android:id="@+id/yellowCardTeam2"
                        style="@style/card"
                        android:drawableEnd="@drawable/yellow_card50"
                        android:gravity="center_vertical|center|end" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/team2RedCard"
                    style="@style/playerAndCards"
                    android:layout_below="@id/team2YellowCard">

                    <Button
                        android:id="@+id/addRedCardTeam2"
                        style="@style/addCard"
                        android:onClick="redCardTeam2" />

                    <TextView
                        android:id="@+id/redCardTeam2"
                        style="@style/card"
                        android:drawableEnd="@drawable/red_card50"
                        android:gravity="center_vertical|end" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text20"
            android:background="@android:drawable/ic_notification_overlay"
            android:onClick="reset"
            android:text="@string/reset">

        </Button>

    </LinearLayout>

</ScrollView>